--- a/index.html
+++ b/index.html
@@ -5,9 +5,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dia</title>
     <link rel="stylesheet" href="./styles/main.css">
+    <link rel="favicon" href="./images/logo/dia-logo.svg">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600|Poppins:400,500,600,700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>Dia</h1>
+    <header class="header">
+      <section class="block-container">
+        <div class="top-panel">
+          <div class="logo-nav">  <!-- !!!!!!!!!@@@@@@@@@@@@@ use logo-nav in footer-->
+            <a class="logo-nav__logo" href="#">
+              <img src="./images/logo/dia-logo.svg" alt="logo">
+            </a>
+            <nav class="logo-nav__nav nav">
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a class="nav__link" href="#">HOME</a>
+                </li>
+                <li class="nav__item">
+                  <a class="nav__link" href="#">ABOUT</a>
+                </li>
+                <li class="nav__item">
+                  <a class="nav__link" href="#">SERVICES</a>
+                </li>
+                <li class="nav__item">
+                  <a class="nav__link" href="#">WORK</a>
+                </li>
+                <li class="nav__item">
+                  <a class="nav__link" href="#">CONTACT&nbsp;US</a>
+                </li>
+              </ul>
+            </nav>
+          </div> <!--end of right-->
+          <a class="hire" href="#">HIRE&nbsp;US</a>
+        </div>
+
+        <div class="header-info">
+          <div class="header-info__text-side text-side">
+            <h1 class="text-side__heading">Strategic Agency</h1>
+            <p class="text-side__subheading">We believe in the power of bold ideas that can solve business challenges.</p>
+            <a href="#" class="text-side__link">Learn more</a>
+          </div>
+          <div class="header-info__img-side">
+            <div class="img-side">
+              <h3 class="img-side__heading">INTRO</h3>
+              <p class="img-side__subheading">By the same illusion which lifts the horizon.</p>
+            </div>
+          </div>
+        </div>
+
+      </section>
+
+    </header>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
