--- a/index.html
+++ b/index.html
@@ -16,7 +16,16 @@
             <a class="logo-nav__logo" href="#">
               <img src="./images/logo/dia-logo.svg" alt="logo">
             </a>
+            <div class="hamburger">
+              <label class="hamburger-logo" for="menu-toggler">
+                <input class="hamburger__check" type="checkbox">
+                <span></span>
+                <span></span>
+                <span></span>
+              </label>
+            </div>
             <nav class="logo-nav__nav nav">
+              <input class="hamburger-checkbox" type="checkbox" id="menu-toggler">
               <ul class="nav__list">
                 <li class="nav__item">
                   <a class="nav__link" href="#">HOME</a>
