--- a/index.html
+++ b/index.html
@@ -61,10 +61,42 @@
             </div>
           </div>
         </div>
-
+      </section>
+    </header>
+    <main class="main-container">
+      <section class="about-info">
+        <h2 class="about-info__header">Who we are</h2>
+        <p class="about-info__text">We embrace a strategic approach to creative ideas. We are interested in people and human relationships. This is the main thing you need to know about us. We believe in the power of bold ideas that can solve business challenges.</p>
+      </section>
+      <section class="expertise">
+        <h2 class="expertise__heading">Our expertise</h2>
+        <div class="expertise__services">
+          <div class="service">
+            <div class="service__pict">
+              <img src="./images/upd/expertise/1.png" alt="branding picture">
+            </div>
+            <h3 class="service__header">Branding</h3>
+            <p class="service__text">We create additional value for companies, products, services as well as verbal and visual ways to deliver it to the audience.</p>
+          </div>
+          <div class="service">
+            <div class="service__pict">
+              <img src="./images/upd/expertise/2.png" alt="branding picture">
+            </div>
+            <h3 class="service__header">Communication</h3>
+            <p class="service__text">We strive to create communications that can increase media performance. We use everything — words, meanings, stories, art, movies.</p>
+          </div>
+          <div class="service">
+            <div class="service__pict">
+              <img src="./images/upd/expertise/3.png" alt="branding picture">
+            </div>
+            <h3 class="service__header">Strategy</h3>
+            <p class="service__text">We create business growth strategies, from the moment of its birth to the achievement of the necessary business indicators.</p>
+          </div>
+        </div>
       </section>
 
-    </header>
+    </main>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
