--- a/index.html
+++ b/index.html
@@ -94,6 +94,69 @@
           </div>
         </div>
       </section>
+      <section class="process">
+        <div class="process__info info">
+          <h4 class="info__subheader">PROCESS</h4>
+          <h2 class="info__main-header">Air is a full service creative agency</h2>
+          <p class="info__text info__text_top">Deep analytics, strong strategy and bright creative ideas.</p>
+          <p class="info__text">We are sure that first-rate job is possible only if all three components are united.</p>
+        </div>
+        <div class="process__blocks">
+
+          <div class="blocks blocks_shifted">
+
+
+            <div class="blocks__block block">
+              <h4 class="block__number">001</h4>
+              <p class="block__text">Brand Development Copywriting Logo & Webite Design Packaging</p>
+              <div class="block__link">
+                <div class="arrow-img">
+                  <img class="arrow-img__img" src="./images/upd/process/arrow.png" alt="">
+                </div>
+
+                <a href="#">Learn more</a>
+              </div>
+            </div>
+            <div class="blocks__block block">
+              <h4 class="block__number">003</h4>
+              <p class="block__text">Marketing Strategy Email Marketing Paid Advertising Blog Content & SEO</p>
+              <div class="block__link">
+                <div class="arrow-img">
+                  <img class="arrow-img__img" src="./images/upd/process/arrow.png" alt="">
+                </div>
+
+                <a href="#">Learn more</a>
+              </div>
+            </div>
+          </div>
+          <div class="blocks">
+
+            <div class="blocks__block block">
+              <h4 class="block__number">002</h4>
+              <p class="block__text">Сontent Production Graphic Design Video Production Post Production</p>
+              <div class="block__link">
+                <div class="arrow-img">
+                  <img class="arrow-img__img" src="./images/upd/process/arrow.png" alt="">
+                </div>
+
+                <a href="#">Learn more</a>
+              </div>
+            </div>
+            <div class="blocks__block block">
+              <h4 class="block__number">004</h4>
+              <p class="block__text">Digital Communications Influencer Marketing Product Placements Strategic Partnerships</p>
+              <div class="block__link">
+                <div class="arrow-img">
+                  <img class="arrow-img__img" src="./images/upd/process/arrow.png" alt="">
+                </div>
+
+                <a href="#">Learn more</a>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </section>
 
     </main>
 
