--- a/index.html
+++ b/index.html
@@ -73,21 +73,27 @@
         <div class="expertise__services">
           <div class="service">
             <div class="service__pict">
-              <img src="./images/upd/expertise/1.png" alt="branding picture">
+              <div class="try">
+                <img src="./images/upd/expertise/1.png" alt="branding picture">
+              </div>
             </div>
             <h3 class="service__header">Branding</h3>
             <p class="service__text">We create additional value for companies, products, services as well as verbal and visual ways to deliver it to the audience.</p>
           </div>
           <div class="service">
             <div class="service__pict">
-              <img src="./images/upd/expertise/2.png" alt="branding picture">
+              <div class="try">
+                <img src="./images/upd/expertise/2.png" alt="branding picture">
+              </div>
             </div>
             <h3 class="service__header">Communication</h3>
             <p class="service__text">We strive to create communications that can increase media performance. We use everything — words, meanings, stories, art, movies.</p>
           </div>
           <div class="service">
             <div class="service__pict">
-              <img src="./images/upd/expertise/3.png" alt="branding picture">
+              <div class="try">
+                <img src="./images/upd/expertise/3.png" alt="branding picture">
+              </div>
             </div>
             <h3 class="service__header">Strategy</h3>
             <p class="service__text">We create business growth strategies, from the moment of its birth to the achievement of the necessary business indicators.</p>
@@ -110,22 +116,24 @@
               <h4 class="block__number">001</h4>
               <p class="block__text">Brand Development Copywriting Logo & Webite Design Packaging</p>
               <div class="block__link">
-                <div class="arrow-img">
-                  <img class="arrow-img__img" src="./images/upd/process/arrow.png" alt="">
-                </div>
-
-                <a href="#">Learn more</a>
+                <a href="#">
+                  <div class="arrow-img">
+                    <img class="arrow-img__img" src="./images/upd/process/arrow.png" alt="">
+                  </div>
+                  <p>Learn more</p>
+                </a>
               </div>
             </div>
             <div class="blocks__block block">
               <h4 class="block__number">003</h4>
               <p class="block__text">Marketing Strategy Email Marketing Paid Advertising Blog Content & SEO</p>
               <div class="block__link">
-                <div class="arrow-img">
-                  <img class="arrow-img__img" src="./images/upd/process/arrow.png" alt="">
-                </div>
-
-                <a href="#">Learn more</a>
+                <a href="#">
+                  <div class="arrow-img">
+                    <img class="arrow-img__img" src="./images/upd/process/arrow.png" alt="">
+                  </div>
+                  <p>Learn more</p>
+                </a>
               </div>
             </div>
           </div>
@@ -135,22 +143,24 @@
               <h4 class="block__number">002</h4>
               <p class="block__text">Сontent Production Graphic Design Video Production Post Production</p>
               <div class="block__link">
-                <div class="arrow-img">
-                  <img class="arrow-img__img" src="./images/upd/process/arrow.png" alt="">
-                </div>
-
-                <a href="#">Learn more</a>
+                <a href="#">
+                  <div class="arrow-img">
+                    <img class="arrow-img__img" src="./images/upd/process/arrow.png" alt="">
+                  </div>
+                  <p>Learn more</p>
+                </a>
               </div>
             </div>
             <div class="blocks__block block">
               <h4 class="block__number">004</h4>
               <p class="block__text">Digital Communications Influencer Marketing Product Placements Strategic Partnerships</p>
               <div class="block__link">
-                <div class="arrow-img">
-                  <img class="arrow-img__img" src="./images/upd/process/arrow.png" alt="">
-                </div>
-
-                <a href="#">Learn more</a>
+                <a href="#">
+                  <div class="arrow-img">
+                    <img class="arrow-img__img" src="./images/upd/process/arrow.png" alt="">
+                  </div>
+                  <p>Learn more</p>
+                </a>
               </div>
             </div>
 
