--- a/index.html
+++ b/index.html
@@ -42,10 +42,13 @@
                 <li class="nav__item">
                   <a class="nav__link" href="#">CONTACT&nbsp;US</a>
                 </li>
+                <li class="nav__item hire">
+                  <a class="nav__link" href="#">HIRE&nbsp;US</a>
+                </li>
               </ul>
             </nav>
           </div> <!--end of right-->
-          <a class="hire" href="#">HIRE&nbsp;US</a>
+          <!-- <a class="hire" href="#">HIRE&nbsp;US</a> -->
         </div>
 
         <div class="header-info">
@@ -56,6 +59,14 @@
           </div>
           <div class="header-info__img-side">
             <div class="img-side">
+              <div class="arrows">
+                <div class="arrow slide-left">
+                  <img class="arrow-img arrow__left" src="./images/upd/header/carousel-l.png" alt="">
+                </div>
+                <div class="arrow  slide-right">
+                  <img class="arrow-img arrow__right" src="./images/upd/header/carousel-r.png" alt="">
+                </div>
+              </div>
               <h3 class="img-side__heading">INTRO</h3>
               <p class="img-side__subheading">By the same illusion which lifts the horizon.</p>
             </div>
