--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
             <a class="logo-nav__logo" href="#">
               <img src="./images/logo/dia-logo.svg" alt="logo">
             </a>
+
+
             <div class="hamburger">
               <label class="hamburger-logo" for="menu-toggler">
                 <input class="hamburger__check" type="checkbox">
@@ -48,9 +50,7 @@
               </ul>
             </nav>
           </div> <!--end of right-->
-          <!-- <a class="hire" href="#">HIRE&nbsp;US</a> -->
         </div>
-
         <div class="header-info">
           <div class="header-info__text-side text-side">
             <h1 class="text-side__heading">Strategic Agency</h1>
@@ -119,63 +119,62 @@
           <p class="info__text">We are sure that first-rate job is possible only if all three components are united.</p>
         </div>
         <div class="process__blocks">
-
           <div class="blocks blocks_shifted">
-
-
             <div class="blocks__block block">
-              <h4 class="block__number">001</h4>
-              <p class="block__text">Brand Development Copywriting Logo & Webite Design Packaging</p>
-              <div class="block__link">
-                <a href="#">
+              <a href="#">
+                <h4 class="block__number">001</h4>
+                <p class="block__text">Brand Development Copywriting Logo & Webite Design Packaging</p>
+                <div class="block__link">
                   <div class="arrow-img">
-                    <img class="arrow-img__img" src="./images/upd/process/arrow.png" alt="">
+                    <img class="arrow-img__img" src="./images/upd/process/arrow.png" alt="link button">
                   </div>
                   <p>Learn more</p>
-                </a>
-              </div>
+                </div>
+              </a>
             </div>
             <div class="blocks__block block">
-              <h4 class="block__number">003</h4>
-              <p class="block__text">Marketing Strategy Email Marketing Paid Advertising Blog Content & SEO</p>
-              <div class="block__link">
-                <a href="#">
+              <a href="#">
+                <h4 class="block__number">003</h4>
+                <p class="block__text">Marketing Strategy Email Marketing Paid Advertising Blog Content & SEO</p>
+                <div class="block__link">
                   <div class="arrow-img">
-                    <img class="arrow-img__img" src="./images/upd/process/arrow.png" alt="">
+                    <img class="arrow-img__img" src="./images/upd/process/arrow.png" alt="link button">
                   </div>
                   <p>Learn more</p>
-                </a>
-              </div>
+                </div>
+              </a>
             </div>
           </div>
           <div class="blocks">
-
             <div class="blocks__block block">
-              <h4 class="block__number">002</h4>
-              <p class="block__text">Сontent Production Graphic Design Video Production Post Production</p>
-              <div class="block__link">
-                <a href="#">
+              <a href="#">
+                <h4 class="block__number">002</h4>
+                <p class="block__text">Сontent Production Graphic Design Video Production Post Production</p>
+                <div class="block__link">
                   <div class="arrow-img">
-                    <img class="arrow-img__img" src="./images/upd/process/arrow.png" alt="">
+                    <img class="arrow-img__img" src="./images/upd/process/arrow.png" alt="link button">
                   </div>
                   <p>Learn more</p>
-                </a>
-              </div>
+                </div>
+              </a>
             </div>
             <div class="blocks__block block">
-              <h4 class="block__number">004</h4>
-              <p class="block__text">Digital Communications Influencer Marketing Product Placements Strategic Partnerships</p>
-              <div class="block__link">
-                <a href="#">
+              <a href="#">
+                <h4 class="block__number">004</h4>
+                <p class="block__text">Digital Communications Influencer Marketing Product Placements Strategic Partnerships</p>
+                <div class="block__link">
                   <div class="arrow-img">
-                    <img class="arrow-img__img" src="./images/upd/process/arrow.png" alt="">
+                    <img class="arrow-img__img" src="./images/upd/process/arrow.png" alt="link button">
                   </div>
                   <p>Learn more</p>
-                </a>
-              </div>
+                </div>
+              </a>
             </div>
-
           </div>
+        </div>
+      </section>
+      <section class="approach-outter">
+        <div class="approach-inner">
         </div>
       </section>
 
