--- a/index.html
+++ b/index.html
@@ -175,11 +175,154 @@
       </section>
       <section class="approach-outter">
         <div class="approach-inner">
+          <div class="approach-info">
+            <h4 class="approach-info__subheader">APPROACH</h4>
+            <h2 class="approach-info__header">We strive to create meaningful projects</h2>
+            <div class="approach-info__block block-line">
+              <img class="block-line__img" src="./images/upd/approach/1.svg" alt="speaker icon">
+              <p class="block-line__text">We are sure that the brands built on a strong strategy, big ideas and simple human values always win. Only such brands change the game.</p>
+            </div>
+            <div class="approach-info__block block-line">
+              <img class="block-line__img" src="./images/upd/approach/2.svg" alt="calendar icon">
+              <p class="block-line__text">No one can realize the idea as its creators. Therefore, we set up agency-based photo and video production departments.</p>
+            </div>
+            <div class="approach-info__block block-line">
+              <img class="block-line__img" src="./images/upd/approach/3.svg" alt="list icon">
+              <p class="block-line__text">We strive to create meaningful projects that make brands valuable, and the world around us more aesthetic.</p>
+            </div>
+          </div>
+          <img class="approach-photo" src="./images/upd/approach/Photo.png" alt="loft photo">
         </div>
       </section>
-
+      <section class="testimonials">
+        <h4 class="testimonials__subheader">TESTIMONIALS</h4>
+        <h2 class="testimonials__header">What<br>people say</h2>
+        <div class="testimonials__feedbacks">
+          <div class="feedback">
+            <img class="feedback__rectangle-upper rect" src="./images/upd/testimonials/Rectangle.png" alt="decoration to a photo">
+            <img class="feedback__photo" src="./images/upd/testimonials/testimonial-ava-1.jpg" alt="photo of a person" width="140px">
+            <img class="feedback__rectangle-lower rect" src="./images/upd/testimonials/Rectangle.png" alt="decoration to a photo">
+            <img class="feedback__img-quotes" src="./images/upd/testimonials/quotes.png" alt="decoration to quote">
+            <p class="feedback__quote">AIR’s ideas are refreshing and out of the box. Authentic team that focuses on the important path of the brand.</p>
+            <p class="feedback__name">Tal Gilad</p>
+            <p class="feedback__company">Teach for America</p>
+          </div>
+          <div class="feedback">
+            <img class="feedback__rectangle-upper rect" src="./images/upd/testimonials/Rectangle.png" alt="decoration to a photo">
+            <img class="feedback__photo" src="./images/upd/testimonials/testimonial-ava-2.jpg" alt="photo of a person" width="140px">
+            <img class="feedback__rectangle-lower rect" src="./images/upd/testimonials/Rectangle.png" alt="decoration to a photo">
+            <img class="feedback__img-quotes" src="./images/upd/testimonials/quotes.png" alt="decoration to quote">
+            <p class="feedback__quote">AIR is an exceptional agency that leads with creative talent, first-class account servicing.</p>
+            <p class="feedback__name">Azadeh Hawkins</p>
+            <p class="feedback__company">Hawkins Consulting</p>
+          </div>
+          <div class="feedback">
+            <img class="feedback__rectangle-upper rect" src="./images/upd/testimonials/Rectangle.png" alt="decoration to a photo">
+            <img class="feedback__photo" src="./images/upd/testimonials/testimonial-ava-3.jpg" alt="photo of a person" width="140px">
+            <img class="feedback__rectangle-lower rect" src="./images/upd/testimonials/Rectangle.png" alt="decoration to a photo">
+            <img src="./images/upd/testimonials/quotes.png" alt="decoration to quote" class="feedback__img-quotes">
+            <p class="feedback__quote">AIR raises the agency bar to stratospheric heights on both creative output and client service.</p>
+            <p class="feedback__name">Michel Grover</p>
+            <p class="feedback__company">Hulu</p>
+          </div>
+        </div>
+      </section>
+      <section class="components">
+        <div class="components__figures">
+          <div class="components__figure"></div>
+          <div class="components__figure"></div>
+          <div class="components__figure"></div>
+          <div class="components__figure"></div>
+          <div class="components__figure"></div>
+          <div class="components__figure"></div>
+        </div>
+        <h2 class="components__header">Vision, Passion, Results</h2>
+        <p class="components__text">We are sure that first-rate job is possible only if all three components are united.</p>
+        <a href="#" class="components__btn">Apply</a>
+      </section>
     </main>
-
+    <footer class="footer">
+      <div class="forms">
+        <div class="message">
+          <h2 class="message__header">Send us a message</h2>
+          <form action="#" method="POST" class="message__form form">
+            <input
+              class="form__email form-default"
+              type="email"
+              placeholder="Your email"
+              name="message_users-email"
+              required
+            >
+            <input
+              class="form__users-name  form-default"
+              type="text"
+              name="message-users-name"
+              placeholder="Your name"
+              required
+              >
+              <textarea
+                class="form__textarea  form-default"
+                name="message-textarea"
+                placeholder="Your name"
+                cols="1"
+                required
+                >
+              </textarea>
+              <input
+                class="form__submit"
+                type="submit"
+                name="message-submit"
+                value="Send"
+              >
+          </form>
+        </div>
+        <div class="forms__contact contact">
+          <h2 class="contact__header">Send us a message</h2>
+          <p class="contact__text">CALL US</p>
+          <p class="contact__phone-numbers">
+            <a href="tel:654 321 987">654 321 987</a>
+          </p>
+          <p class="contact__text">VISIT US</p>
+          <p class="contact__address-location">2905 West Drive, Buffalo Grove</p>
+          <p class="contact__text">OUR SOCIALS</p>
+          <div class="contact__socials-icons">
+            <a href="#">
+              <img class="socials-icon facebook" src="./images/upd/footer/facebook.svg" alt="facebook logo">
+            </a>
+            <a href="#">
+              <img class="socials-icon twitter" src="./images/upd/footer/icons8-twitter.svg" alt="twitter logo">
+            </a>
+            <a href="#">
+              <img class="socials-icon instagram" src="./images/upd/footer/instagram.svg" alt="instagram logo">
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="logo-nav">  <!-- !!!!!!!!!@@@@@@@@@@@@@ use logo-nav in footer-->
+        <a class="logo-nav__logo" href="#">
+          <img src="./images/logo/dia-logo.svg" alt="logo">
+        </a>
+        <nav class="logo-nav__nav nav">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a class="nav__link" href="#">HOME</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link" href="#">ABOUT</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link" href="#">SERVICES</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link" href="#">WORK</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link" href="#">CONTACT&nbsp;US</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
