--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         </div>
         <div class="process__blocks">
           <div class="blocks blocks_shifted">
-            <div class="blocks__block block">
+            <div class="blocks__block block  block_left block_one">
               <a href="#">
                 <h4 class="block__number">001</h4>
                 <p class="block__text">Brand Development Copywriting Logo & Webite Design Packaging</p>
@@ -132,7 +132,7 @@
                 </div>
               </a>
             </div>
-            <div class="blocks__block block">
+            <div class="blocks__block block  block_right block_three">
               <a href="#">
                 <h4 class="block__number">003</h4>
                 <p class="block__text">Marketing Strategy Email Marketing Paid Advertising Blog Content & SEO</p>
@@ -146,7 +146,7 @@
             </div>
           </div>
           <div class="blocks">
-            <div class="blocks__block block">
+            <div class="blocks__block block  block_left block_two">
               <a href="#">
                 <h4 class="block__number">002</h4>
                 <p class="block__text">Сontent Production Graphic Design Video Production Post Production</p>
@@ -158,7 +158,7 @@
                 </div>
               </a>
             </div>
-            <div class="blocks__block block">
+            <div class="blocks__block block  block_right block_four">
               <a href="#">
                 <h4 class="block__number">004</h4>
                 <p class="block__text">Digital Communications Influencer Marketing Product Placements Strategic Partnerships</p>
