--- a/index.html
+++ b/index.html
@@ -203,27 +203,27 @@
               <h2 class="testimonials__header">What<br>people say</h2>
               <div class="testimonials__feedbacks">
                 <div class="feedback">
-                  <img class="feedback__rectangle-upper rect" src="./images/upd/testimonials/Rectangle.png" alt="decoration to a photo">
-                  <img class="feedback__photo" src="./images/upd/testimonials/testimonial-ava-1.jpg" alt="photo of a person" width="140px">
-                  <img class="feedback__rectangle-lower rect" src="./images/upd/testimonials/Rectangle.png" alt="decoration to a photo">
+                  <img class="feedback__rectangle-upper rect rect-top" src="./images/upd/testimonials/Rectangle.png" alt="decoration to a photo">
+                  <img class="feedback__photo scale-photo" src="./images/upd/testimonials/testimonial-ava-1.jpg" alt="photo of a person" width="140px">
+                  <img class="feedback__rectangle-lower rect rect-bot" src="./images/upd/testimonials/Rectangle.png" alt="decoration to a photo">
                   <img class="feedback__img-quotes" src="./images/upd/testimonials/quotes.png" alt="decoration to quote">
                   <p class="feedback__quote">AIR’s ideas are refreshing and out of the box. Authentic team that focuses on the important path of the brand.</p>
                   <p class="feedback__name">Tal Gilad</p>
                   <p class="feedback__company">Teach for America</p>
                 </div>
                 <div class="feedback">
-                  <img class="feedback__rectangle-upper rect" src="./images/upd/testimonials/Rectangle.png" alt="decoration to a photo">
-                  <img class="feedback__photo" src="./images/upd/testimonials/testimonial-ava-2.jpg" alt="photo of a person" width="140px">
-                  <img class="feedback__rectangle-lower rect" src="./images/upd/testimonials/Rectangle.png" alt="decoration to a photo">
+                  <img class="feedback__rectangle-upper rect  rect-top" src="./images/upd/testimonials/Rectangle.png" alt="decoration to a photo">
+                  <img class="feedback__photo scale-photo" src="./images/upd/testimonials/testimonial-ava-2.jpg" alt="photo of a person" width="140px">
+                  <img class="feedback__rectangle-lower rect rect-bot" src="./images/upd/testimonials/Rectangle.png" alt="decoration to a photo">
                   <img class="feedback__img-quotes" src="./images/upd/testimonials/quotes.png" alt="decoration to quote">
                   <p class="feedback__quote">AIR is an exceptional agency that leads with creative talent, first-class account servicing.</p>
                   <p class="feedback__name">Azadeh Hawkins</p>
                   <p class="feedback__company">Hawkins Consulting</p>
                 </div>
                 <div class="feedback">
-                  <img class="feedback__rectangle-upper rect" src="./images/upd/testimonials/Rectangle.png" alt="decoration to a photo">
-                  <img class="feedback__photo" src="./images/upd/testimonials/testimonial-ava-3.jpg" alt="photo of a person" width="140px">
-                  <img class="feedback__rectangle-lower rect" src="./images/upd/testimonials/Rectangle.png" alt="decoration to a photo">
+                  <img class="feedback__rectangle-upper rect  rect-top" src="./images/upd/testimonials/Rectangle.png" alt="decoration to a photo">
+                  <img class="feedback__photo scale-photo" src="./images/upd/testimonials/testimonial-ava-3.jpg" alt="photo of a person" width="140px">
+                  <img class="feedback__rectangle-lower rect rect-bot" src="./images/upd/testimonials/Rectangle.png" alt="decoration to a photo">
                   <img src="./images/upd/testimonials/quotes.png" alt="decoration to quote" class="feedback__img-quotes">
                   <p class="feedback__quote">AIR raises the agency bar to stratospheric heights on both creative output and client service.</p>
                   <p class="feedback__name">Michel Grover</p>
@@ -293,13 +293,27 @@
                 <p class="contact__text">OUR SOCIALS</p>
                 <div class="contact__socials-icons">
                   <a href="#">
-                    <img class="socials-icon facebook" src="./images/upd/footer/facebook.svg" alt="facebook logo">
+                    <svg version="1.1"
+                      class="socials-icon facebook" id="fb" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+                      fill="#fff" viewBox="0 0 155.139 155.139">
+                      <path id="f_1_" d="M89.584,155.139V84.378h23.742l3.562-27.585H89.584V39.184 c0-7.984,2.208-13.425,13.67-13.425l14.595-0.006V1.08C115.325,0.752,106.661,0,96.577,0C75.52,0,61.104,12.853,61.104,36.452 v20.341H37.29v27.585h23.814v70.761H89.584z"/>
+                    </svg>
                   </a>
                   <a href="#">
-                    <img class="socials-icon twitter" src="./images/upd/footer/icons8-twitter.svg" alt="twitter logo">
+                    <svg
+                      class="socials-icon twitter" id="tw"
+                      fill="#fff" viewBox="0 -47 512.00203 512" xmlns="http://www.w3.org/2000/svg">
+                      <path d="m191.011719 419.042969c-22.140625 0-44.929688-1.792969-67.855469-5.386719-40.378906-6.335938-81.253906-27.457031-92.820312-33.78125l-30.335938-16.585938 32.84375-10.800781c35.902344-11.804687 57.742188-19.128906 84.777344-30.597656-27.070313-13.109375-47.933594-36.691406-57.976563-67.175781l-7.640625-23.195313 6.265625.957031c-5.941406-5.988281-10.632812-12.066406-14.269531-17.59375-12.933594-19.644531-19.78125-43.648437-18.324219-64.21875l1.4375-20.246093 12.121094 4.695312c-5.113281-9.65625-8.808594-19.96875-10.980469-30.777343-5.292968-26.359376-.863281-54.363282 12.476563-78.851563l10.558593-19.382813 14.121094 16.960938c44.660156 53.648438 101.226563 85.472656 168.363282 94.789062-2.742188-18.902343-.6875-37.144531 6.113281-53.496093 7.917969-19.039063 22.003906-35.183594 40.722656-46.691407 20.789063-12.777343 46-18.96875 70.988281-17.433593 26.511719 1.628906 50.582032 11.5625 69.699219 28.746093 9.335937-2.425781 16.214844-5.015624 25.511719-8.515624 5.59375-2.105469 11.9375-4.496094 19.875-7.230469l29.25-10.078125-19.074219 54.476562c1.257813-.105468 2.554687-.195312 3.910156-.253906l31.234375-1.414062-18.460937 25.230468c-1.058594 1.445313-1.328125 1.855469-1.703125 2.421875-1.488282 2.242188-3.339844 5.03125-28.679688 38.867188-6.34375 8.472656-9.511718 19.507812-8.921875 31.078125 2.246094 43.96875-3.148437 83.75-16.042969 118.234375-12.195312 32.625-31.09375 60.617187-56.164062 83.199219-31.023438 27.9375-70.582031 47.066406-117.582031 56.847656-23.054688 4.796875-47.8125 7.203125-73.4375 7.203125zm0 0"/>
+                    </svg>
                   </a>
                   <a href="#">
-                    <img class="socials-icon instagram" src="./images/upd/footer/instagram.svg" alt="instagram logo">
+                    <svg
+                      class="socials-icon instagram" id="ig"
+                      fill="#fff" height="511pt" viewBox="0 0 511 511.9" width="511pt" xmlns="http://www.w3.org/2000/svg">
+                      <path d="m510.949219 150.5c-1.199219-27.199219-5.597657-45.898438-11.898438-62.101562-6.5-17.199219-16.5-32.597657-29.601562-45.398438-12.800781-13-28.300781-23.101562-45.300781-29.5-16.296876-6.300781-34.898438-10.699219-62.097657-11.898438-27.402343-1.300781-36.101562-1.601562-105.601562-1.601562s-78.199219.300781-105.5 1.5c-27.199219 1.199219-45.898438 5.601562-62.097657 11.898438-17.203124 6.5-32.601562 16.5-45.402343 29.601562-13 12.800781-23.097657 28.300781-29.5 45.300781-6.300781 16.300781-10.699219 34.898438-11.898438 62.097657-1.300781 27.402343-1.601562 36.101562-1.601562 105.601562s.300781 78.199219 1.5 105.5c1.199219 27.199219 5.601562 45.898438 11.902343 62.101562 6.5 17.199219 16.597657 32.597657 29.597657 45.398438 12.800781 13 28.300781 23.101562 45.300781 29.5 16.300781 6.300781 34.898438 10.699219 62.101562 11.898438 27.296876 1.203124 36 1.5 105.5 1.5s78.199219-.296876 105.5-1.5c27.199219-1.199219 45.898438-5.597657 62.097657-11.898438 34.402343-13.300781 61.601562-40.5 74.902343-74.898438 6.296876-16.300781 10.699219-34.902343 11.898438-62.101562 1.199219-27.300781 1.5-36 1.5-105.5s-.101562-78.199219-1.300781-105.5zm-46.097657 209c-1.101562 25-5.300781 38.5-8.800781 47.5-8.601562 22.300781-26.300781 40-48.601562 48.601562-9 3.5-22.597657 7.699219-47.5 8.796876-27 1.203124-35.097657 1.5-103.398438 1.5s-76.5-.296876-103.402343-1.5c-25-1.097657-38.5-5.296876-47.5-8.796876-11.097657-4.101562-21.199219-10.601562-29.398438-19.101562-8.5-8.300781-15-18.300781-19.101562-29.398438-3.5-9-7.699219-22.601562-8.796876-47.5-1.203124-27-1.5-35.101562-1.5-103.402343s.296876-76.5 1.5-103.398438c1.097657-25 5.296876-38.5 8.796876-47.5 4.101562-11.101562 10.601562-21.199219 19.203124-29.402343 8.296876-8.5 18.296876-15 29.398438-19.097657 9-3.5 22.601562-7.699219 47.5-8.800781 27-1.199219 35.101562-1.5 103.398438-1.5 68.402343 0 76.5.300781 103.402343 1.5 25 1.101562 38.5 5.300781 47.5 8.800781 11.097657 4.097657 21.199219 10.597657 29.398438 19.097657 8.5 8.300781 15 18.300781 19.101562 29.402343 3.5 9 7.699219 22.597657 8.800781 47.5 1.199219 27 1.5 35.097657 1.5 103.398438s-.300781 76.300781-1.5 103.300781zm0 0"/>
+                      <path d="m256.449219 124.5c-72.597657 0-131.5 58.898438-131.5 131.5s58.902343 131.5 131.5 131.5c72.601562 0 131.5-58.898438 131.5-131.5s-58.898438-131.5-131.5-131.5zm0 216.800781c-47.097657 0-85.300781-38.199219-85.300781-85.300781s38.203124-85.300781 85.300781-85.300781c47.101562 0 85.300781 38.199219 85.300781 85.300781s-38.199219 85.300781-85.300781 85.300781zm0 0"/>
+                      <path d="m423.851562 119.300781c0 16.953125-13.746093 30.699219-30.703124 30.699219-16.953126 0-30.699219-13.746094-30.699219-30.699219 0-16.957031 13.746093-30.699219 30.699219-30.699219 16.957031 0 30.703124 13.742188 30.703124 30.699219zm0 0"/>
+                    </svg>
                   </a>
                 </div>
               </div>
